--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,6 @@
 remote_theme: just-the-docs/just-the-docs
 footer_content: "Copyright &copy; 2022 Avast Software."
+aux_links:
+  "YARA Language Server on GitHub":
+    - "//github.com/avast/yls"
+
