--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,4 +3,6 @@ footer_content: "Copyright &copy; 2022 Avast Software."
 aux_links:
   "YARA Language Server on GitHub":
     - "//github.com/avast/yls"
-
+nav_external_links:
+  - title: YARA Language Server on GitHub
+    url: https://github.com/avast/yls
