--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
 remote_theme: just-the-docs/just-the-docs
+baseurl: /fluffy-train
 footer_content: "Copyright &copy; 2022 Avast Software."
 aux_links:
   "YARA Language Server on GitHub":
